tests/snapshots/assets__check_file@unit-math-attach.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/math/attach.typ
snapshot_kind: text
---
$
  a_b^c
$
$
  a^c_b
$
$
  a^c_b''
$
$
  a^c''_b
$
$
  a''^c_b
$
$
  a''^(c+d)_b
$
$
  a''^((c+d))_b
$
$
  a''^(c+d)_(e^f)
$
