tests/snapshots/assets__check_file@unit-math-attach.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/attach.typ
---
$ a_b^c $
$ a^c_b $
$ a^c_b'' $
$ a^c''_b $
$ a''^c_b $
$ a''^(c+d)_b $
$ a''^((c+d))_b $
$ a''^(c+d)_(e^f) $
