tests/snapshots/assets__check_file@unit-math-brace-space.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/math/brace-space.typ
snapshot_kind: text
---
${ a b } ( 1 2 ) [ | | ]$
${ a b } (1 2 ) [ | | ]$

${}$
