tests/snapshots/assets__check_file@unit-math-brace-space.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/brace-space.typ
---
${ a b } ( 1 2 ) [ | | ]$
${ a b } (1 2 ) [ | | ]$

${}$
