tests/snapshots/assets__check_file@unit-math-complex-math.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/complex-math.typ
---
$
Re[
  epsilon(omega) \/ epsilon.alt_0
] =& 1 + 2 / pi cal(P) integral_0^oo (omega' Im[
  epsilon(omega') \/ epsilon_0
]) / (omega'^2 - omega^2) dif omega' \
Im[
  epsilon(omega) \/ epsilon.alt_0
] =& sigma / (epsilon_0 omega) - (2 omega) / pi cal(P) integral_0^oo (omega' Re[
  epsilon(omega') \/ epsilon_0 - 1
]) / (omega'^2 - omega^2) dif omega'
$
