tests/snapshots/assets__check_file@unit-math-delimited.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/math/delimited.typ
snapshot_kind: text
---
$f(x) = sin(    cos(tan   (
  x) ) arctan
  (y  + 6 * (3 - 78 / 64)
  )  )$

$f(x) = a + (b
    + c) + d +d
  + f$

// issues/141
$
  f(x) = cases(
    "a very very very very very very very long case",
    "b very very very very very very very long case".
  )
$
$
  f(x) = abs(
    "aaaaaaaaaaa very very very very very very very very very very very very very very very very very long arg"
  )
$
$
  (a + b) = abs(
    "aaaaaaaa very very very very very very very very very very very very very very very very very long arg"
  )
$
$
  f[x] = abs(
    "aaaaaaaaaaa very very very very very very very very very very very very very very very very very long arg"
  )
$
