tests/snapshots/assets__check_file@unit-math-equation-flavor.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/equation-flavor.typ
snapshot_kind: text
---
$
  F(x) = integral_0^x f(t) dif t
$

$
  F(x) = integral_0^x f(t) dif t
$
