tests/snapshots/assets__check_file@unit-math-equation-flavor.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/math/equation-flavor.typ
---
$
  F(x) = integral_0^x f(t) dif t
$

$ F(x) = integral_0^x f(t) dif t $
